--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@ body {
   padding: 100px 0;
 }
 
-.header img {
+
+.header > img {
   width: 300px;
   border-radius: 30px;
   animation: myAnim 2s ease 0s infinite normal forwards;
@@ -116,21 +117,24 @@ body {
 }
 
 .view-chart {
+  width: fit-content;
+  padding: 20px 40px;
+  justify-content: center;
   display: flex;
+  background-color: #736F72;
   flex-direction: row;
-  gap: 14px;
+  gap: 24px;
+  border-radius: 20px;
   margin-top: 40px;
 }
 
 .view-chart > a {
   text-decoration: none;
-  letter-spacing: 2px;
-  padding: 14px 25px;
-  border-radius: 24px;
-  background: #d5b0ac;
-  font-size: 1.5em;
-  color: #051014;
-  font-weight: 600;
+}
+
+.view-chart a img {
+  width: 60px;
+  border-radius: 50%;
 }
 
 .about {
@@ -310,11 +314,13 @@ body {
 }
 
 .grids > div {
+  text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  gap: 20px;
   border-radius: 20px;
   border: 2px solid black;
   background-color: #ffd289;
