--- a/style.css
+++ b/style.css
@@ -214,6 +214,16 @@ body {
   font-weight: 600;
 }
 
+.about-div {
+  align-items: center;
+}
+
+.about-div div {
+  display: flex;
+  align-items: end;
+  gap: 100px;
+}
+
 .about > div {
   width: 70%;
   gap: 80px;
@@ -500,6 +510,10 @@ body {
     display: flex;
     flex-direction: column;
     gap: 50px;
+  }
+
+  .about-div div {
+    flex-direction: column;
   }
 
   .about > span:nth-child(1) {
